fix default text alignment in content modal

--- a/src/extensions/mg-modal.scss
+++ b/src/extensions/mg-modal.scss
@@ -4,7 +4,6 @@
   flex-direction: column;
   justify-content: center;
   justify-items: center;
-  text-align: center;
   top: 0;
   left: 0;
   width: 100%;
